[gd_scene load_steps=4 format=3 uid="uid://dihjbg8eiidw8"]

[ext_resource type="Script" path="res://ui/pause_menu/pages/save_slots/save_slot/save_slot_button.gd" id="1_c356o"]
[ext_resource type="Texture2D" uid="uid://ck8j1u876runl" path="res://ui/sprites/generic_nine_patch_rect.png" id="1_vjjtu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_158p6"]

[node name="SaveSlotButton" type="Button"]
custom_minimum_size = Vector2(210, 60)
offset_right = 48.0
offset_bottom = 53.0
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_158p6")
toggle_mode = true
script = ExtResource("1_c356o")

[node name="ButtonRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_vjjtu")
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 11
patch_margin_bottom = 11
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="ButtonRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 7

[node name="HBoxContainer" type="HBoxContainer" parent="ButtonRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Column" type="VBoxContainer" parent="ButtonRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="SaveName" type="Label" parent="ButtonRect/MarginContainer/HBoxContainer/Column"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "SaveName
"

[node name="ChapterName" type="Label" parent="ButtonRect/MarginContainer/HBoxContainer/Column"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Chapter: %s
"

[node name="Column2" type="VBoxContainer" parent="ButtonRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="SaveFileCreated" type="Label" parent="ButtonRect/MarginContainer/HBoxContainer/Column2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "SaveFileCreated
"

[node name="LastSavedDate" type="Label" parent="ButtonRect/MarginContainer/HBoxContainer/Column2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "LastSavedDate
"

[node name="TimePlayed" type="Label" parent="ButtonRect/MarginContainer/HBoxContainer/Column2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "TimePlayed
"

[node name="Column3" type="VBoxContainer" parent="ButtonRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0
